# hsm.rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  debug_test.rs
examples/: js_compatibility_test.rs  kind_demo.rs
src/: api.rs  behavior_context.rs  builder.rs  context.rs  context_runtime.rs  dsl.rs  element.rs  error.rs  event.rs  group.rs  hsm_impl.rs  kind.rs  lib.rs  macro_builders.rs  macros.rs  model.rs  model_lifecycle.rs  model_validation.rs  path.rs  queue.rs  runtime.rs
tests/: activities_test.rs  any_event_test.rs  attribute_set_test.rs  basic_functionality_test.rs  choice_states_test.rs  config_snapshot_test.rs  context_fanout_test.rs  context_test.rs  deferred_runtime_test.rs  dispatch_results_test.rs  entry_exit_functions_test.rs  entry_test.rs  event_ownership_test.rs  event_test.rs  group_test.rs  guard_conditions_test.rs  hierarchical_states_test.rs  history_test.rs  hsm_comprehensive_test.rs  initial_test.rs  kind_test.rs  model_finalization_test.rs  model_hooks_test.rs  multi_action_test.rs  observe_test.rs  operation_on_call_test.rs  pascal_case_builders_test.rs  path_test.rs  queue_test.rs  redefine_test.rs  reentrancy_test.rs  rust_reference_simple_test.rs  rust_reference_test.rs  submachine_test.rs  timer_at_when_parity_test.rs  transition_types_test.rs  validation_test.rs
